2005-09-13  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	* hw/xfree86/dri/Makefile.am:
	Turn on DRI by default on Linux, NetBSD, FreeBSD, and fix the build of
	the module for FreeBSD by setting some missing defines (XFree86Module,
	IN_MODULE) in the dri directory.  Note that those missing defines should
	be somewhere generic, since there are other consumers of them, but I
	haven't figured out where.

2005-09-13  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/os-support/bsd/Makefile.am:
	* include/dix-config.h.in:
	* include/xorg-config.h.in:
	* include/xorg-server.h.in:
	Add some initial BSD support for the xorg server.  Incomplete on NetBSD,
	OpenBSD, and non-i386/amd64 FreeBSD for sure.  Plus I haven't actually
	run it yet.

2005-09-12  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	Don't define POSIX_SOURCE on any BSDs, since it breaks things.

	* hw/xfree86/int10/Makefile.am:
	Define NO_SYS_HEADERS, as the monolithic build does.  Helps FreeBSD.

	* hw/xfree86/x86emu/Makefile.am:
	Don't include validate.c in the library, since it seems to be a userland
	test program.

2005-09-12  Daniel Stone  <daniel@freedesktop.org>

	* configure.ac:
	Put DMX AC_CONDITIONALS at the top level, since they must always be
	called.  Add missing resourceproto, fontenc, and fontsproto to
	REQUIRED_MODULES.

	* configure.ac:
	* include/xorg-config.h.in:
	* include/xorg-server.h.in:
	Since we build vgahw unconditionally, always define WITH_VGAHW.

2005-09-09  Jürg Billeter  <j@bitron.ch>

	* configure.ac: use RGB_DB not RGB_PATH as that's what it's looking for

	* xkb/Makefile.am: define HAVE_XKB_CONFIG_H so setting xkb-path works

2005-09-02  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Use macros from xtrans.m4, issue error if not found.

2005-09-02  Daniel Stone  <daniel@freedesktop.org>

	* GL/mesa/X/Makefile.am:
	Add -include dix-config.h to CFLAGS so we pickup _XSERVER64 and other