@@ -1049,6 +1049,7 @@ hw/xfree86/xaa/Makefile
 hw/xfree86/xf1bpp/Makefile
 hw/xfree86/xf4bpp/Makefile
 hw/xfree86/xf8_16bpp/Makefile
+hw/xfree86/xf8_32bpp/Makefile
 hw/xfree86/xf8_32wid/Makefile
 hw/dmx/config/Makefile
 hw/dmx/input/Makefile
