@@ -4,11 +4,11 @@ endif
 
 SUBDIRS = common ddc dummylib i2c x86emu int10 fbdevhw os-support parser rac \
           ramdac shadowfb vbe vgahw xaa xf1bpp xf4bpp xf8_16bpp \
-	  xf8_32wid loader scanpci dixmods exa $(DRI_SUBDIR)
+	  xf8_32bpp xf8_32wid loader scanpci dixmods exa $(DRI_SUBDIR)
 
 DIST_SUBDIRS = common ddc dummylib i2c x86emu int10 fbdevhw os-support \
                parser rac ramdac shadowfb vbe vgahw xaa xf1bpp xf4bpp \
-               xf8_16bpp xf8_32wid loader scanpci dixmods dri exa
+               xf8_16bpp xf8_32bpp xf8_32wid loader scanpci dixmods dri exa
 
 bin_PROGRAMS = Xorg
 
