@@ -1,3 +1,12 @@
+2005-09-14  Eric Anholt  <anholt@FreeBSD.org>
+
+	* configure.ac:
+	* hw/xfree86/Makefile.am:
+	* hw/xfree86/loader/Makefile.am:
+	* hw/xfree86/xf8_32bpp/Makefile.am:
+	Build xf8_32bpp, which is wanted by the mga driver, and export elf.h,
+	which is wanted by the rendition driver.
+
 2005-09-13  Eric Anholt  <anholt@FreeBSD.org>
 
 	* configure.ac:
